--- a/config.json
+++ b/config.json
@@ -12,12 +12,12 @@
         "blog_title": "AI Adventures",
         "blog_des": "From Pixels to Predictions",
         "gmail-user": "yapatel7761@gmail.com",
-        "gmail-password": "Pyash@99",
+        "gmail-password": "",
         "about_me": "I am Yash Patel, professional Machine Learning Engineer.",
         "about_project": "This is my first IoT project which is based on Smart Waste Management System.",
         "no_of_posts": 3,
         "admin_name": "yapatel7761@gmail.com",
-        "admin_password": "Pyash@99",
+        "admin_password": "",
         "file_path" : "C:\\Users\\yapat\\UPLOADS"
     }
 }
